title letter spacing fix

--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ body {
 
 h1, h2 {
   font-family: 'Bitter', serif;
-  letter-spacing: .03em;
+  letter-spacing: .022em;
 }
 
 a {
